# new-timesheet-manager

./: .bazelrc  .gitignore  BUILD.bazel  GEMINI.md  MODULE.bazel  go.mod  go.sum  new-timesheet-manager-server.slnx
app/: angular.json  package-lock.json
app/src/app/: app.ts
client/: buf.gen.yaml  package.json
proto/: BUILD.bazel  timesheet_manager.proto  timesheet_manager_services.proto
server/: BUILD.bazel  Exceptions.cs  Program.cs  appsettings.json  main.go  new-timesheet-manager-server.csproj
server-csharp/: appsettings.json
server-csharp/Protos/: greet.proto
server-csharp/Validators/: ActivityValidator.cs  BaseValidator.cs  EmployeeValidator.cs  PhaseValidator.cs  ProjectValidator.cs  TimesheetValidator.cs  UserValidator.cs
server/Extensions/: FirestoreExtensions.cs
server/Models/: ActivityModel.cs  BaseModel.cs  ClientModel.cs  EmployeeModel.cs  PhaseModel.cs  ProjectModel.cs  TimesheetModel.cs  UserModel.cs
server/Properties/: launchSettings.json
server/Services/: ActivityService.cs
server/Testdata/: activity.json  activity_invalid1.json  activity_invalid2.json  activity_invalid3.json  client.json  client_invalid1.json  client_invalid2.json  client_invalid3.json  employee.json  employee_invalid1.json  employee_invalid2.json  employee_invalid3.json  phase.json  phase_invalid1.json  phase_invalid2.json  phase_invalid3.json  project.json  project_invalid1.json  project_invalid2.json  project_invalid3.json  timesheet.json  timesheet_invalid1.json  timesheet_invalid2.json  timesheet_invalid3.json  user.json  user_invalid1.json  user_invalid2.json  user_invalid3.json
server/Validators/: ActivityValidator.cs  ActivityValidatorTests.cs  BaseValidator.cs  ClientValidator.cs  ClientValidatorTests.cs  EmployeeValidator.cs  EmployeeValidatorTests.cs  PhaseValidator.cs  PhaseValidatorTests.cs  ProjectValidator.cs  ProjectValidatorTests.cs  TimesheetValidator.cs  TimesheetValidatorTests.cs  UserValidator.cs  UserValidatorTests.cs
server/models/: BUILD.bazel  firebase.go  models.go
server/services/: BUILD.bazel  services.go  validators.go
