"""Timesheet-Manager Bazel Module."""

bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "googleapis", version = "0.0.0-20241220-5e258e33.bcr.1")
bazel_dep(name = "googleapis-go", version = "1.0.0")
bazel_dep(name = "protobuf", version = "30.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_go", version = "0.53.0")

cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc")

# register_execution_platforms(
#     "//:x64_windows-clang-cl",
# )
# 
# register_toolchains(
#     "@local_config_cc//:cc-toolchain-x64_windows-clang-cl",
# )

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_golang_google_genproto",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)
