load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "timesheet_manager_proto",
    srcs = ["timesheet_manager.proto"],
    deps = [
        "@googleapis//google/type:date_proto",
        "@googleapis//google/type:money_proto",
        "@protobuf//:duration_proto",
    ],
)

go_proto_library(
    name = "timesheet_manager_go_proto",
    importpath = "github.com/JesusDeLaProg/timesheet-manager/proto",
    protos = [":timesheet_manager_proto"],
    deps = [
        "@googleapis//google/type:date_go_proto",
        "@googleapis//google/type:money_go_proto",
    ],
)
