load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

gazelle(name = "gazelle")

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/JesusDeLaProg/timesheet-manager/server",
    visibility = ["//visibility:private"],
    deps = [
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//reflection",
        "//proto:timesheet_manager_go_proto",
    ],
)
