load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/JesusDeLaProg/new-timesheet-manager/server",
    visibility = ["//visibility:private"],
    deps = [
        "//server/models:models_lib",
        "//server/services:services_lib",
        "@org_golang_google_grpc//:grpc",
    ],
)
