load("@rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//server:__subpackages__"])

go_library(
    name = "services_lib",
    srcs = ["services.go"],
    importpath = "github.com/JesusDeLaProg/new-timesheet-manager/server/services",
    deps = [
        "//proto:timesheet_manager_go_proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
