load("@rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//server:__subpackages__"])

go_library(
    name = "services_lib",
    srcs = [
        "services.go",
        "validators.go",
    ],
    importpath = "github.com/JesusDeLaProg/new-timesheet-manager/server/services",
    deps = [
        "//proto:timesheet_manager_go_proto",
        "//server/models:models_lib",
        "@build_buf_go_protovalidate//:protovalidate",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
    ],
)
